--- a/static/style.css
+++ b/static/style.css
@@ -35,7 +35,7 @@ body {
 }
 
 header {
-    height: 95%;
+    height: 95vh;
     background-image: url('christmas-background-1512410173MML.jpg');
     background-position: center;
     background-size: cover;
